# BlinkBash

client/: Cargo.toml
client/src/: main.rs  state.rs
program/: Cargo.toml
program/configs/: kinobi.cjs
program/src/: accounts.rs  instruction.rs  lib.rs  processor.rs  state.rs
program/src/instructions/: claim_prize.rs  enter.rs  init.rs  list_item.rs  mod.rs  purchase_item.rs  vote.rs
program/src/utils/: common.rs  core.rs  token.rs
