[package]
name = "solana_rust_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "0.3.7"
bytemuck = { version = "1.13.1", features = ["derive"] }
num-derive = "0.4"
num-traits = "0.2"
num_enum = "0.6.1"
spl-discriminator = "0.2.2"
spl-type-length-value = "0.4.3"
spl-tlv-account-resolution = "0.6.3"
spl-pod = "0.2.2"
solana-sdk = "1.18.15"
solana-client = "1.18.15"
solana-program = "1.18.15"
spl-token = {version = "4.0.0", features = ["no-entrypoint"]}
spl-token-2022 = {version = "3.0.2", features = ["no-entrypoint"]}
borsh = "=1.4.0"
solana-transaction-status = "1.16.0"
rand = "0.7.0"
spl-associated-token-account = "2.0"
enum-map = "1.1.1"
thiserror = "1.0"
async-trait = "0.1"
futures-util = "0.3"
spl-token-metadata-interface = { version = "0.3.3"}
